--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 <body>
 
   <div class="sticky-header">
-    <div class="header-title">✈️ 旅のプラン整理メモ</div>
+    <div class="header-title">かのNavi</div>
     <div class="sync-controls">
       <label for="share-id" style="margin:0; font-size:0.85rem;">共有ID:</label>
       <input type="text" id="share-id" placeholder="例：kanazawa-tokyo">
